syntax = "proto3";

package google.ads.googleads.tests.util;
option csharp_namespace = "Google.Ads.GoogleAds.Tests.Util";

import "google/protobuf/wrappers.proto";
import "google/protobuf/field_mask.proto";

message TestSuite {
  repeated TestCase test_cases = 1;
}

message TestCase {
  string description = 1;
  Resource original_resource = 2;
  Resource modified_resource = 3;
  google.protobuf.FieldMask expected_mask = 4;
}

message Resource {
  google.protobuf.StringValue wrapper = 1;
  Foo foo = 2;
  repeated Foo foos = 3;
  optional int64 opt_foos = 4; 
}

message Foo {
  int64 num = 1;
  Bar bar = 2;
  repeated Bar bars = 3;
  optional string text = 4;
  Baz baz = 5;
}

message Bar {
  optional int64 num = 1;
}

message Baz {
}